--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <h1>MAXWELL JAMBO</h1>
     <center><img src="Profile3.png" width="560" height="300"></center>
     <h2>ABOUT ME</h2>
-    <p1>I am a photographer and a student at Mzuzu University, studying diploma in ICT. Born and raised in Blantyre, right now I am Currently based in mzuzu,  As a Photographer I am the founder of Pages Pictures Malawi, its a registered Photography company which is based in Mzuzu, Northetn part of Malawi. I do Photography, Videography, Graphic Designing etc. which includes but not limited to the following events, Weddings, Corporate events, Individual Pictures</p1>
+    <p1>I am a photographer and a student at Mzuzu University, studying diploma in ICT. Born and raised in Blantyre, right now I am Currently based in Mzuzu,  As a Photographer I am the founder of Pages Pictures Malawi, its a registered Photography company which is based in Mzuzu, Northern part of Malawi. I do Photography, Videography, Graphic Designing etc. which includes but not limited to the following events, Weddings, Corporate events, Individual Pictures</p1>
     <h2>PROJECTS</h2>
     <h3>Weddings</h3>
 
